--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier-plugin-svelte": "^0.7.0",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.0.3",
@@ -24,7 +25,7 @@
     "svelte-preprocess": "^3.2.0"
   },
   "dependencies": {
-    "sanitize-html": "^1.20.1",
+    "dompurify": "^2.0.7",
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
